--- a/styles/bio.css
+++ b/styles/bio.css
@@ -27,6 +27,25 @@ html, body {
   overflow: auto;
 }
 
+body {
+  font-size: 0.8125rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  font-family: "Avenir Next Regular";
+}
+@media (min-width: 768px) {
+  body {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+@media (min-width: 1280px) {
+  body {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+
 .navigation {
   display: flex;
   flex-direction: column;
