--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1014,9 +1014,104 @@ body {
   padding: 0.75rem;
   margin-bottom: 1.25rem;
   margin-left: 3.125rem;
+  box-sizing: border-box;
 }
 .comments__comment-input {
   height: 6.25rem;
+  padding-bottom: 60px;
+  overflow: auto;
+  resize: none;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+.comments__name-input::-moz-placeholder, .comments__comment-input::-moz-placeholder {
+  font-size: 0.8125rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  font-family: "Avenir Next Regular";
+}
+.comments__name-input::placeholder, .comments__comment-input::placeholder {
+  font-size: 0.8125rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  font-family: "Avenir Next Regular";
+}
+@media (min-width: 768px) {
+  .comments__name-input::-moz-placeholder, .comments__comment-input::-moz-placeholder {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+  .comments__name-input::placeholder, .comments__comment-input::placeholder {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+@media (min-width: 1280px) {
+  .comments__name-input::-moz-placeholder, .comments__comment-input::-moz-placeholder {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+  .comments__name-input::placeholder, .comments__comment-input::placeholder {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+.comments__name-input:focus, .comments__comment-input:focus {
+  border-color: #000000;
+  font-size: 0.8125rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  font-family: "Avenir Next Regular";
+  outline: none;
+}
+@media (min-width: 768px) {
+  .comments__name-input:focus, .comments__comment-input:focus {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+@media (min-width: 1280px) {
+  .comments__name-input:focus, .comments__comment-input:focus {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+.comments__name-input:not(:-moz-placeholder-shown), .comments__comment-input:not(:-moz-placeholder-shown) {
+  font-size: 0.8125rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  font-family: "Avenir Next Regular";
+  color: #323232;
+}
+.comments__name-input:not(:placeholder-shown), .comments__comment-input:not(:placeholder-shown) {
+  font-size: 0.8125rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  font-family: "Avenir Next Regular";
+  color: #323232;
+}
+@media (min-width: 768px) {
+  .comments__name-input:not(:-moz-placeholder-shown), .comments__comment-input:not(:-moz-placeholder-shown) {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+  .comments__name-input:not(:placeholder-shown), .comments__comment-input:not(:placeholder-shown) {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+@media (min-width: 1280px) {
+  .comments__name-input:not(:-moz-placeholder-shown), .comments__comment-input:not(:-moz-placeholder-shown) {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+  .comments__name-input:not(:placeholder-shown), .comments__comment-input:not(:placeholder-shown) {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+.comments__name-input.error, .comments__comment-input.error {
+  border-color: red;
 }
 .comments__img {
   width: 2.4rem;
@@ -1197,27 +1292,28 @@ body {
   }
 }
 @media (min-width: 1280px) {
+  .comments__name-label, .comments__comment-label {
+    margin-left: 25rem;
+  }
   .comments__name-input, .comments__comment-input {
     width: 30%;
     align-self: flex-start;
     min-height: 3rem;
     padding: 0.75rem;
     margin-bottom: 1.25rem;
-    margin-left: 18rem;
   }
   .comments__name-input {
-    margin-left: 15rem;
+    margin-left: 25rem;
   }
   .comments__comment-input {
     height: 6.25rem;
-    margin-left: 13rem;
+    margin-left: 25rem;
   }
   .comments__img {
     width: 3.75rem;
     height: 3.75rem;
     border-radius: 50%;
-    margin-left: 24rem;
-    margin-bottom: 1rem;
+    margin-left: 24.55rem;
   }
   .comments__btn {
     font-size: 0.8125rem;
@@ -1227,7 +1323,7 @@ body {
     height: 2.5rem;
     width: 12%;
     margin-bottom: 1.25rem;
-    margin-left: 37.5rem;
+    margin-left: 38.5rem;
   }
 }
 @media (min-width: 1280px) and (min-width: 768px) {
@@ -1257,7 +1353,7 @@ body {
   content: "";
   position: absolute;
   left: 50%;
-  width: 85%;
+  width: 88%;
   height: 0.0625rem;
   background-color: #E1E1E1;
   transform: translateX(-50%);
@@ -1301,6 +1397,8 @@ body {
   font-weight: 400;
   font-family: "Avenir Next Regular";
   margin: 10px 30px 20px 100px;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 @media (min-width: 768px) {
   .comment-list__content {
@@ -1389,7 +1487,7 @@ body {
     line-height: 1.125rem;
     font-weight: 400;
     font-family: "Avenir Next Regular";
-    margin: 10px 50px 30px 170px;
+    margin: 0.625rem 3.5rem 1.875rem 10.625rem;
   }
 }
 @media (min-width: 768px) and (min-width: 768px) {
