--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -234,9 +234,32 @@
         padding: .75rem;
         margin-bottom: 1.25rem;
         margin-left: 3.125rem;
+        box-sizing: border-box;
     }
     &__comment-input{
         height: 6.25rem;
+        padding-bottom: 60px;
+        overflow: auto;
+        resize: none;
+        white-space: pre-wrap;
+        word-wrap: break-word;
+    }
+    &__name-input::placeholder, &__comment-input::placeholder{
+        @include body;
+    }
+    &__name-input:focus, &__comment-input:focus {
+        border-color: $bandSite-darkBlack;
+        @include body;
+        outline: none; 
+    }
+    &__name-input,&__comment-input {
+        &:not(:placeholder-shown) {
+            @include body;
+            color: $bandSite-black;
+        }
+    }
+    &__name-input.error, &__comment-input.error {
+        border-color: red;
     }
     &__img{
         width: 2.4rem;
@@ -319,34 +342,35 @@
             @include section-header;
             padding: 1rem 0 3rem 5.5rem;
         }
+        &__name-label, &__comment-label {
+            margin-left: 25rem;
+        }
         &__name-input, &__comment-input{
             width: 30%;
             align-self: flex-start;
             min-height: 3rem;
             padding: .75rem;
             margin-bottom: 1.25rem;
-            margin-left: 18rem;
         }
         &__name-input{
-            margin-left: 15rem;
+            margin-left: 25rem;
         }
         &__comment-input{
             height: 6.25rem;
-            margin-left: 13rem;
+            margin-left: 25rem;
         }
         &__img{
             width: 3.75rem;
             height: 3.75rem;
             border-radius: 50%;
-            margin-left: 24rem;
-            margin-bottom: 1rem;
+            margin-left: 24.55rem;
         }
         &__btn {
             @include body;
             height: 2.5rem;
             width: 12%;
             margin-bottom: 1.25rem;
-            margin-left: 37.5rem;
+            margin-left: 38.5rem;
     
         }
     }
@@ -369,7 +393,7 @@
             content: "";
             position: absolute;
             left: 50%;
-            width: 85%; // Adjust this value to make the border longer
+            width: 88%; // Adjust this value to make the border longer
             height: .0625rem;
             background-color: $mercury;
             transform: translateX(-50%); // Centre the border horizontally 
@@ -398,6 +422,8 @@
     &__content{
         @include body;
         margin: 10px 30px 20px 100px;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
     }
     &__timestamp{
         @include body;
@@ -442,7 +468,7 @@
         }
         &__content{
             @include body;
-            margin: 10px 50px 30px 170px;
+            margin: .625rem 3.5rem 1.875rem 10.625rem;
         }
         &__timestamp{
 
